2009-04-10  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::findWhereUsedRecursively):
	fixed bug #2744798 "dependency checking failed". In case when an
	object was used in a group and group used in a rule of a firewall,
	the program failed to properly update "last modified" attribute
	of the firewall when the object was changed.

2009-04-09  vadim  <vadim@vk.crocodile.org>

	* VERSION: start v3.0.5

2009-04-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* v3.0.4 released, merged to the trunk, this comment is r796

2009-03-29  vadim  <vadim@vk.crocodile.org>

	* v3.0.4 release

2009-03-25  vadim  <vadim@vk.crocodile.org>

	* NATCompiler_pf_writers.cpp (PrintRule::_printPort): fixed bug
	#2712514: "Bug in PF NAT Writer - 'tagged' keyword". Keyword
	'tagged' is only allowed on the left hand side of '->' in nat
	and rdr rules.

	* RuleElement.cpp (RuleElementTSrv::validateChild): (change in
	libfwbuilder) fixed bug #2712575: "NAT RuleSetView allows
	TagService to be in Translated Svc". TagService object should not
	be allowed in "Translated Service" in NAT rules.

2009-03-24  vadim  <vadim@vk.crocodile.org>

	* DialogData.cpp (DialogData::loadToWidget): fixed bug #2710309:
	"Bug in gui/DialogData.cpp when not using mapping.". There was a
	bug in DialogData.cpp that when setting the value of a combobox
	and not using a mapping array the requested value would not be
	selected. Applied patch provided by Tom Judge ( tomjudge )

	* platforms.cpp (init_platforms): fixed bug #2710300 "Bug in
	gui/platforms.cpp". there was a discrepancy between the list of
	route-to options for PF and UI elements.

	* pf.cpp (main): more changes to add support for
	externally-controlled policy rulesets for PF: if policy ruelset
	name ends with "/*", the program assumes it is controlled by
	external means and does not compile rules in it and does not
	create .conf file from it.

	* PolicyCompiler_pf_writers.cpp (PrintRule::_printAction): Added