@@ -1,5 +1,11 @@
 2009-04-10  vadim  <vadim@vk.crocodile.org>
 
+	* ipt.cpp (dumpScript): fixed bug #2356131: "Iptables-restore
+	option broken for multiple policy sets". Compiler inserted
+	redundant line "echo COMMIT" to the iptables script if
+	iptables-restore was used and there were no rules in the mangle
+	table.
+
 	* ObjectManipulator.cpp (ObjectManipulator::findWhereUsedRecursively):
 	fixed bug #2744798 "dependency checking failed". In case when an
 	object was used in a group and group used in a rule of a firewall,
